--- a/weblate/templates/manage-access.html
+++ b/weblate/templates/manage-access.html
@@ -33,7 +33,7 @@
   <tbody>
 {% for user in all_users %}
   <tr>
-  <td>{{ user.username }}</td>
+  <td><a href="/user/{{ user.username }}">{{ user.username }}</a></td>
   <td>{{ user.full_name }}</td>
   <td>{{ user.email }}</td>
   <td>{% if user.last_login %}{{ user.last_login|naturaltime }}{% else %}{% trans "Not yet signed in" %}{% endif %}</td>
