make api token reset button red

--- a/weblate/templates/accounts/profile.html
+++ b/weblate/templates/accounts/profile.html
@@ -266,7 +266,7 @@
 </tr>
 <tr>
 <td colspan="2">
-    <a class="pull-right flip btn btn-primary link-post" href="{% url 'reset-api-key' %}">{% trans "Regenerate API key" %}</a>
+    <a class="pull-right flip btn btn-danger link-post" href="{% url 'reset-api-key' %}">{% trans "Regenerate API key" %}</a>
 </td>
 </tr>
 <tr>
